--- a/src/Services/Catalog/Catalog.API/Catalog.API.csproj
+++ b/src/Services/Catalog/Catalog.API/Catalog.API.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Marten" Version="7.38.1" />
+	  <PackageReference Include="Carter" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
   </ItemGroup>
 
