--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -11,5 +11,5 @@ services:
   ports:
    - "5432:5432"
   volumes:
-   - postgres_catalog;/var/lib/postgresq/data/
+   - postgres_catalog:/var/lib/postgresq/data/
 		
