--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": {
+  "ConnectionStrings": {
     "Database": "Server=localhost;Port=5432;Database=CatalogDb;User Id=postgres;Password=postgres;Include Error Detail=true"
   },
     "Logging": {
